--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.5.1",
     "babel-eslint": "^10.1.0",
     "cors": "^2.8.5",
+    "element-plus": "^2.4.1",
     "moment": "^2.29.4",
     "pinia": "^2.1.6",
     "sass": "^1.69.1",
@@ -42,6 +43,7 @@
     "npm-run-all2": "^6.0.6",
     "prettier": "^3.0.3",
     "typescript": "~5.2.0",
+    "unplugin-auto-import": "^0.16.6",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
